<resources>
    <string name="app_name">Myths &amp; Gods</string>
    <string name="logo_name">M&amp;G</string>
    <string name="app_mail">myths&amp;gods@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_favorite">Favoris</string>
    <string name="str_home">Home</string>
    <string name="str_category">Catégories</string>
    <string name="str_setting">Paramètre</string>
    <string name="str_share">Partager</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="message_account">Déjà un compte ? Connectez vous ici</string>
    <string name="message_account2">Pas de compte encore ? Enregistrez vous ici</string>
    <string name="welcome_message" >Bienvenue ! Vous êtes connecté</string>
</resources>
