<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/str_home"></item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@mipmap/ic_logo"
            android:title="@string/str_category"></item>
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/str_favorite"></item>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/str_setting">
        </item>
    </group>

    <item android:title="Communiquer">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/str_share"></item>
        </menu>
    </item>

</menu>